--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,10 +1,4 @@
 # These are supported funding model platforms
 
-github: # FTKhanFT
-patreon: # FTKhanFT
-open_collective: # FTKhanFT
-ko_fi: # FTKhanFT
-community_bridge: # FTKhanFT
-liberapay: # FTKhanFT
-issuehunt: # FTKhanFT
-otechie: # FTKhanFT
+github: FTKhanFT
+patreon: FTKhanFT
